# ChatServer

./: .claudeignore  .gitignore  CMakeLists.txt  README.md
Testmod/testboost/: testboost  testboost.cpp
Testmod/testjson/: testjson  testjson.cpp
Testmod/testmuduo/: a.out  testmuduo  testmuduo.cpp
docs/: C++协程深入宏观理解.md  architecture-comparison.md  muduo-to-asio-migration-plan.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  log.hpp  session.hpp
include/server/db/: connectionpool.h  db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  imagemodel.hpp  messagemodel.hpp  newmsgmodel.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  session.cpp
src/server/db/: connectionpool.cpp  db.cpp
src/server/redis/: redis.cpp
